<resources>
    <string name="app_name">MVVM Architecture</string>
    <string name="description">Description</string>
    <string name="priority">1</string>
    <string name="title">Title</string>
    <string name="add_note_button">Add Note Button</string>
    <string name="title_hint">Title</string>
    <string name="priority_text">priority</string>
    <string name="save">Save</string>
    <string name="delete_all_notes">Delete all notes</string>
</resources>