<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEditNoteActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/title_hint" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/edit_text_title"
        app:layout_constraintStart_toStartOf="@id/edit_text_title"
        app:layout_constraintEnd_toEndOf="@id/edit_text_title"
        android:hint="@string/description" />

    <TextView
        android:id="@+id/text_view_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_description"
        app:layout_constraintStart_toStartOf="@id/edit_text_description"
        android:text="@string/priority_text"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <NumberPicker
        android:id="@+id/number_picker_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_priority"
        app:layout_constraintStart_toStartOf="@id/text_view_priority"/>

</androidx.constraintlayout.widget.ConstraintLayout>